fix(ui): DOMA-9506 fixed rtl text alignment

--- a/packages/ui/src/components/Select/style.less
+++ b/packages/ui/src/components/Select/style.less
@@ -289,6 +289,7 @@
   &.condo-select-dropdown-ellipsis-start {
     .condo-select-item-option-content {
       direction: rtl;
+      text-align: left;
     }
   }
 
